# rsc-on-this-day

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  build.sh  custom_strftime.py  formate.toml  lint_roller.sh  pyproject.toml  repo_helper.yml  requests_cache_test.py  requirements.txt  rsc_on_this_day.py  setup.cfg  setup.py  sphinx_shared.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  octocheese.yml
doc-source/: Source.rst  api.rst  conf.py  contributing.rst  docs.rst  index.rst  license.rst  manpage.rst  requirements.txt  usage.rst
doc-source/_templates/sidebar/: navigation.html
manpage-builder/: conf.py
manpage-source/: conf.py  index.rst  requirements.txt
rsc_on_this_day/: __init__.py  __main__.py
tests/: test_cli.py  test_function.py  test_get_fact.py
tests/test_cli_/: test_cli.txt  test_cli_clear_cache.txt
tests/test_get_fact_/: test_get_fact_date10_.txt  test_get_fact_date16_.txt  test_get_fact_date20_.txt  test_get_fact_date7_.txt  test_get_fact_date8_.txt  test_get_fact_date9_.txt
