# coding: utf-8
# This file is managed by 'repo_helper'. Don't edit it directly.

[metadata]
name = rsc-on-this-da
author = Dominic Davis-Foster
author_email = dominic@davis-foster.co.uk
license = GNUGeneralPublicLicensev3(GPLv3)
keywords =

long_description = file: README.rst
long_description_content_type = text/x-rst
platforms =
    Windows
    macOS
    Linux
url = https://github.com/domdfcoding/rsc-on-this-da
project_urls =
    Documentation = https://rsc-on-this-da.readthedocs.io
    Issue_Tracker = https://github.com/domdfcoding/rsc-on-this-da/issues
    Source_Code = https://github.com/domdfcoding/rsc-on-this-da
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython



[options]
python_requires = >=3.6
zip_safe = False
include_package_data = True
packages = find:


[options.packages.find]
exclude =
    tests
    tests.*
    doc-source
