# coding: utf-8
# This file is managed by 'repo_helper'. Don't edit it directly.

[metadata]
name = rsc-on-this-day
author = Dominic Davis-Foster
author_email = dominic@davis-foster.co.uk
license = GNU General Public License v3 (GPLv3)
keywords =

long_description = file: README.rst
long_description_content_type = text/x-rst
platforms =
    Windows
    macOS
    Linux
url = https://github.com/domdfcoding/rsc-on-this-day
project_urls =
    Documentation = https://rsc-on-this-day.readthedocs.io
    Issue_Tracker = https://github.com/domdfcoding/rsc-on-this-day/issues
    Source_Code = https://github.com/domdfcoding/rsc-on-this-day
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy



[options]
python_requires = >=3.6
zip_safe = False
include_package_data = True
packages = find:


[options.packages.find]
exclude =
    tests
    tests.*
    doc-source


[options.entry_points]
console_scripts =
    rsc_on_this_day=rsc_on_this_day:main
